--- a/force-app/main/default/lwc/caseToLead/caseToLead.html
+++ b/force-app/main/default/lwc/caseToLead/caseToLead.html
@@ -1,22 +1,56 @@
 <template>
+    <template if:true={openCaseClosedScreen}>
+        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
+            aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+
+                <!-- modal body start -->
+                <div class="slds-modal__content slds-p-around_medium" style="width: 41vw;margin-left: -48%;"
+                    id="modal-content-id-1">
+                    <lightning-record-edit-form onerror={handleError} record-id={recordId} object-api-name="Case"
+                        onsubmit={handleSubmit}>
+                        <lightning-messages></lightning-messages>
+
+                        <div class="slds-grid slds-wrap slds-gutters">
+                            <div class="slds-col slds-size_1-of-1">
+                                <lightning-output-field field-name="Reason_for_Closure_ReadOnly__c"
+                                    variant="label-stacked">
+                                </lightning-output-field>
+                            </div>
+                            <div class="slds-col slds-size_1-of-1">
+                                <lightning-input-field field-name="Resolution_Notes__c" required="true"
+                                    variant="label-stacked">
+                                </lightning-input-field>
+                            </div>
+                        </div>
+
+                        <!-- class="slds-popover__footer slds-text-align_right" -->
+                        <footer class="slds-text-align_right" style="margin-top: 1rem; padding: 0.5rem 1rem;">
+                            <button class="slds-button slds-button_neutral" onclick={hideModalBox}>Close</button>
+                            <lightning-button class="slds-m-left_small" variant="brand" type="submit" name="update"
+                                label="Save">
+                            </lightning-button>
+                        </footer>
+
+                    </lightning-record-edit-form>
+                </div>
+                <!-- modal footer start -->
+
+            </div>
+        </section>
+    </template>
     <template if:true={actionMessage}>
         <lightning-card>
             <div class="slds-p-around_medium">
                 <div class="slds-text-align_center slds-text-heading_medium">
                     <template if:true={isSuccess}>
-                        <lightning-icon
-                            icon-name="action:approval"
-                            size="large"
-                            alternative-text="Success"
+                        <lightning-icon icon-name="action:approval" size="large" alternative-text="Success"
                             class="slds-m-bottom_small">
                         </lightning-icon>
                         <div class="message-container" lwc:dom="manual"></div>
                     </template>
                     <template if:false={isSuccess}>
-                        <lightning-icon
-                            icon-name="action:close"
-                            size="large"
-                            alternative-text="Error"
+                        <lightning-icon icon-name="action:close" size="large" alternative-text="Error"
                             class="slds-m-bottom_small">
                         </lightning-icon>
                         <p>
