--- a/force-app/main/default/lwc/encalmLeadProcess/encalmLeadProcess.html
+++ b/force-app/main/default/lwc/encalmLeadProcess/encalmLeadProcess.html
@@ -14,7 +14,7 @@
                     </lightning-progress-indicator>
                 </div>
 
-                <div class="slds-col slds-size_2-of-12" style="margin-left: 1rem;" if:true={showMarkStatusButton}>
+                <div class="slds-col slds-size_2-of-12" style="margin-left: 1rem;" >
                     <lightning-button label="Mark Status" onclick={handleMarkStatus} variant="brand"></lightning-button>
                 </div>
             </div>
